fix breadcrumb css - avoid fixed width on mobile

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -331,17 +331,21 @@ img.size-full {
 /**************************************** breadcrumbs */
 
 .site-breadcrumbs {
-  padding-top: 4px;
-  padding-left: 0px;
-  padding-right: 0px;
-  padding-bottom: 0px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 1100px;
+    position: relative;
 }
 
 .site-breadcrumbs .breadcrumbs {
-  padding-left: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 1100px;
+}
+
+.site-breadcrumbs .breadcrumb-item:first-child {
+    padding-left: 30px;
+}
+
+.site-breadcrumbs .breadcrumb-item {
+    padding-top: 4px;
 }
 
 /**************************************** main content */
